--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,13 +1,26 @@
-/* Global styles */
-@import 'https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap';
+@use 'app/custom-theme' as theming;
+@use '@angular/material' as mat;
 
-html, body {
-  height: 100%;
+// Apply the default theme to html element
+html {
+  @include mat.core();
+  @include mat.all-component-themes(theming.$magenta-violet-theme);
+}
+
+// Apply other themes when the theme class is present on html element
+html.rose-red {
+  @include mat.all-component-themes(theming.$rose-red-theme);
+}
+
+html.azure-blue {
+  @include mat.all-component-themes(theming.$azure-blue-theme);
+}
+
+html.cyan-orange {
+  @include mat.all-component-themes(theming.$cyan-orange-theme);
 }
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
-  background-color: var(--md-sys-color-surface);
-  color: var(--md-sys-color-on-surface);
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
